--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-  <meta http-equiv="refresh" content="0; url=https://linktr.ee/ap_ubatuba_" />
-  <title>Redirecionando...</title>
-</head>
-<body>
-  <p>Redirecionando para o Linktree...</p>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://linktr.ee/ap_ubatuba_" />
+    <title>Redirecionando...</title>
+  </head>
+  <body>
+    <p>Redirecionando para o Linktree...</p>
+  </body>
 </html>
