Reorganizado as fotos

--- a/Riviera.html
+++ b/Riviera.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -53,10 +53,7 @@
           <div class="badges">
             <span class="badge">Apartamento confortável 🛏️</span>
             <span class="badge">Ambiente familiar 👨‍👩‍👧‍👦</span>
-            <span class="badge"
-              >Sacada com vista para os montes e o mar 🌄🌊</span
-            >
-            <span class="badge">Área gourmet integrada 🍽️</span>
+            <span class="badge">Sacada com vista para a piscina 🏊‍♂️</span>
             <span class="badge">150 metros da Praia Grande 🏖️</span>
             <span class="badge destaque">Sua melhor estadia em Ubatuba ✨</span>
           </div>
@@ -67,7 +64,6 @@
           <div class="badges">
             <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
             <span class="badge">Área de lazer com jardim 🌿</span>
-            <span class="badge">Espaço gourmet com vista 🍖</span>
             <span class="badge destaque">Ideal para você e sua família 🏡</span>
           </div>
         </div>
