--- a/CACobertura.html
+++ b/CACobertura.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -23,7 +23,7 @@
   <body
     data-pasta="assets/img/cacobertura"
     data-prefixo="cacobertura"
-    data-total="13"
+    data-total="12"
     data-whatsapp-msg="Olá! Vi a cobertura no Costa Atlântica e gostaria de saber se está disponível para o período [xx/xx - xx/xx]. Pode me passar os detalhes?"
   >
     <div id="header"></div>
