--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-LV38EHSSN1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-LV38EHSSN1");
+    </script>
+
     <meta http-equiv="refresh" content="0; url=https://linktr.ee/ap_ubatuba_" />
     <title>Redirecionando...</title>
   </head>
