Organizado o conteudo da seção sobre de todos os aps

--- a/CACobertura.html
+++ b/CACobertura.html
@@ -66,31 +66,29 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">Cobertura de alto padrão 🏢🌅</span>
-            <span class="badge">3 dormitórios, sendo 2 suítes 🛏️🛁</span>
-            <span class="badge">4 banheiros 🚿</span>
-            <span class="badge">Cozinha equipada 🍽️</span>
-            <span class="badge">Até 12 pessoas 👨‍👩‍👧‍👦</span>
-            <span class="badge destaque">2 vagas cobertas na garagem 🚗🚗</span>
+            <span class="badge">🏢🌅 Cobertura de alto padrão</span>
+            <span class="badge">🛏️🛁 3 dormitórios, sendo 2 suítes</span>
+            <span class="badge">📶❄️ Wi-Fi e ar-condicionado</span>
+            <span class="badge">🚿 4 banheiros</span>
+            <span class="badge">🍽️ Cozinha equipada</span>
+            <span class="badge">👨‍👩‍👧‍👦 Acomoda até 12 pessoas</span>
+            <span class="badge">🚫🐾 Pets não são permitidos</span>
+            <span class="badge">🚗🚗 2 vagas cobertas na garagem</span>
+            <span class="badge destaque"
+              >👥 Ideal para grupos grandes e famílias</span
+            >
           </div>
         </div>
 
         <div class="badge-block">
           <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">Frente ao mar 🌊</span>
+            <span class="badge">🌊 Frente ao mar</span>
+            <span class="badge">🏊‍♂️ 3 piscinas com vista para o mar</span>
+            <span class="badge">🧖 Sauna</span>
+            <span class="badge">🎮 Salão de jogos</span>
             <span class="badge destaque"
-              >Localização privilegiada na Praia Grande ✨</span
-            >
-          </div>
-        </div>
-
-        <div class="badge-block">
-          <h3>📌 Informações importantes</h3>
-          <div class="badges">
-            <span class="badge">Não é permitido pets 🚫🐾</span>
-            <span class="badge destaque"
-              >Ideal para grupos grandes e famílias 👥</span
+              >✨ Localização privilegiada na Praia Grande</span
             >
           </div>
         </div>
