--- a/GBMata.html
+++ b/GBMata.html
@@ -66,33 +66,31 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">2 dormitórios 🛏️</span>
-            <span class="badge">Sala com sofá-cama e TV 📺</span>
-            <span class="badge">Cozinha planejada completa 🍽️</span>
-            <span class="badge">Sacada gourmet com churrasqueira 🍖</span>
-            <span class="badge">Até 8 pessoas 👨‍👩‍👧‍👦</span>
-            <span class="badge destaque">Contato com a natureza 🌿</span>
+            <span class="badge">🛏️ 2 suítes climatizadas</span>
+            <span class="badge">🌳 Sala com vista linda para a mata</span>
+            <span class="badge">🍽️ Cozinha planejada completa</span>
+            <span class="badge"
+              >🔥 Sacada gourmet envidraçada com churrasqueira e vista para a
+              mata</span
+            >
+            <span class="badge"
+              >👨‍👩‍👧‍👦 Acomoda até 8 pessoas, incluindo crianças</span
+            >
+            <span class="badge">🛗 2º andar com elevador e escadas</span>
+            <span class="badge">🚗 1 vaga coberta</span>
+            <span class="badge">🚫🐶 Pets não são permitidos</span>
+            <span class="badge destaque">🌿 Contato direto com a natureza</span>
           </div>
         </div>
 
         <div class="badge-block">
           <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
-            <span class="badge">Salão de jogos 🎮</span>
-            <span class="badge">Natureza preservada ao fundo 🌴</span>
-            <span class="badge">100m da praia 🏖️</span>
-            <span class="badge destaque">Ambiente familiar e tranquilo ☀️</span>
-          </div>
-        </div>
-
-        <div class="badge-block">
-          <h3>ℹ️ Informações úteis</h3>
-          <div class="badges">
-            <span class="badge">2º andar com elevador e escadas 🛗</span>
-            <span class="badge">1 vaga coberta 🚗</span>
-            <span class="badge">Não são permitidos pets 🚫🐶</span>
-            <span class="badge destaque">Mais um ap. no mesmo prédio 🏢</span>
+            <span class="badge">🏊‍♂️ Piscinas adulto e infantil</span>
+            <span class="badge">🎮 Salão de jogos</span>
+            <span class="badge">🌴 Natureza preservada ao fundo</span>
+            <span class="badge">🏖️ A apenas 130m da praia</span>
+            <span class="badge destaque">☀️ Ambiente familiar e tranquilo</span>
           </div>
         </div>
       </div>
