--- a/GBPiscina.html
+++ b/GBPiscina.html
@@ -66,35 +66,34 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">2 dormitórios 🛏️</span>
-            <span class="badge">Sala de jantar e sala de estar 🍽️🛋️</span>
-            <span class="badge">Cozinha equipada 🧑‍🍳</span>
-            <span class="badge">Sacada gourmet com rede 🍖</span>
-            <span class="badge">Até 8 pessoas 👨‍👩‍👧‍👦</span>
-            <span class="badge destaque">Vista para a piscina 🏊‍♂️</span>
-          </div>
-        </div>
-
-        <div class="badge-block">
-          <h3>🏢 Sobre o condomínio</h3>
-          <div class="badges">
-            <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
-            <span class="badge">Salão de jogos 🎯</span>
-            <span class="badge">Área verde preservada 🌿</span>
-            <span class="badge">50m da praia 🏖️</span>
+            <span class="badge"
+              >🛏️ 2 dormitórios, sendo 1 suíte climatizada</span
+            >
+            <span class="badge">🌊 Sala com vista para a piscina</span>
+            <span class="badge">🧑‍🍳 Cozinha equipada</span>
+            <span class="badge"
+              >🔥 Sacada gourmet envidraçada com churrasqueira e vista para a
+              piscina</span
+            >
+            <span class="badge"
+              >👨‍👩‍👧‍👦 Acomoda até 8 pessoas, incluindo crianças</span
+            >
+            <span class="badge">🛗 2º andar com elevador e escadas</span>
+            <span class="badge">🚗 1 vaga coberta</span>
+            <span class="badge">🚫🐶 Pets não são permitidos</span>
             <span class="badge destaque"
-              >Ambiente tranquilo para relaxar ☀️</span
+              >🏊‍♂️ Vista privilegiada para a piscina</span
             >
           </div>
         </div>
-
         <div class="badge-block">
-          <h3>ℹ️ Informações úteis</h3>
+          <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">2º andar com elevador e escadas 🛗</span>
-            <span class="badge">1 vaga coberta 🚗</span>
-            <span class="badge">Não são permitidos pets 🚫🐾</span>
-            <span class="badge destaque">Mais um ap. no mesmo prédio 🏢</span>
+            <span class="badge">🏊‍♂️ Piscinas adulto e infantil</span>
+            <span class="badge">🎮 Salão de jogos</span>
+            <span class="badge">🌴 Natureza preservada ao fundo</span>
+            <span class="badge">🏖️ A apenas 130m da praia</span>
+            <span class="badge destaque">☀️ Ambiente familiar e tranquilo</span>
           </div>
         </div>
       </div>
