--- a/Riviera.html
+++ b/Riviera.html
@@ -66,20 +66,23 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">Apartamento confortável 🛏️</span>
-            <span class="badge">Ambiente familiar 👨‍👩‍👧‍👦</span>
-            <span class="badge">Sacada com vista para a piscina 🏊‍♂️</span>
-            <span class="badge">150 metros da Praia Grande 🏖️</span>
-            <span class="badge destaque">Sua melhor estadia em Ubatuba ✨</span>
+            <span class="badge">🛏️ 2 dormitórios climatizados</span>
+            <span class="badge">👨‍👩‍👧‍👦 Ambiente familiar</span>
+            <span class="badge">🏊‍♂️ Sacada com vista para a piscina</span>
+            <span class="badge"
+              >👨‍👩‍👧‍👦 Acomoda até 8 pessoas, incluindo crianças</span
+            >
+            <span class="badge">🏖️ A apenas 150 metros da Praia Grande</span>
+            <span class="badge destaque">✨ Sua melhor estadia em Ubatuba</span>
           </div>
         </div>
 
         <div class="badge-block">
           <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">Piscina adulto e infantil 🏊‍♂️</span>
-            <span class="badge">Área de lazer com jardim 🌿</span>
-            <span class="badge destaque">Ideal para você e sua família 🏡</span>
+            <span class="badge">🏊‍♂️ Piscinas adulto e infantil</span>
+            <span class="badge">🌿 Área de lazer com jardim</span>
+            <span class="badge destaque">🏡 Ideal para você e sua família</span>
           </div>
         </div>
       </div>
