--- a/GBCobertura.html
+++ b/GBCobertura.html
@@ -66,22 +66,25 @@
         <div class="badge-block">
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
-            <span class="badge">Cobertura duplex 🏢⬆️</span>
-            <span class="badge">4 dormitórios, sendo 2 suítes 🛏️🛁</span>
-            <span class="badge">4 banheiros no total 🚿</span>
-            <span class="badge">Cozinha equipada 🍽️</span>
-            <span class="badge">Até 10 pessoas 👨‍👩‍👧‍👦</span>
-            <span class="badge destaque">2 vagas cobertas na garagem 🚗🚗</span>
+            <span class="badge">🏢⬆️ Cobertura duplex</span>
+            <span class="badge">🛏️🛁 4 dormitórios, sendo 2 suítes</span>
+            <span class="badge">🚿 4 banheiros no total</span>
+            <span class="badge">🛜 Wi-Fi disponível</span>
+            <span class="badge">🍽️ Cozinha equipada</span>
+            <span class="badge">👨‍👩‍👧‍👦 Acomoda até 10 pessoas</span>
+            <span class="badge">🚫🐶 Pets não são permitidos</span>
+            <span class="badge destaque">🚗🚗 2 vagas cobertas na garagem</span>
           </div>
         </div>
 
         <div class="badge-block">
-          <h3>📌 Informações importantes</h3>
+          <h3>🏢 Sobre o condomínio</h3>
           <div class="badges">
-            <span class="badge">Não é permitido pets 🚫🐾</span>
-            <span class="badge destaque"
-              >Ideal para grupos e famílias grandes ✨</span
-            >
+            <span class="badge">🏊‍♂️ Piscinas adulto e infantil</span>
+            <span class="badge">🎮 Salão de jogos</span>
+            <span class="badge">🌴 Natureza preservada ao fundo</span>
+            <span class="badge">🏖️ A apenas 130m da praia</span>
+            <span class="badge destaque">☀️ Ambiente familiar e tranquilo</span>
           </div>
         </div>
       </div>
