--- a/CACobertura.html
+++ b/CACobertura.html
@@ -67,7 +67,9 @@
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
             <span class="badge">🏢🌅 Cobertura de alto padrão</span>
-            <span class="badge">🛏️🛁 3 dormitórios, sendo 2 suítes</span>
+            <span class="badge"
+              >🛏️🛁 3 dormitórios climatizados, sendo 2 suítes</span
+            >
             <span class="badge">📶❄️ Wi-Fi e ar-condicionado</span>
             <span class="badge">🚿 4 banheiros</span>
             <span class="badge">🍽️ Cozinha equipada</span>
