--- a/GBCobertura.html
+++ b/GBCobertura.html
@@ -67,7 +67,9 @@
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
             <span class="badge">🏢⬆️ Cobertura duplex</span>
-            <span class="badge">🛏️🛁 4 dormitórios, sendo 2 suítes</span>
+            <span class="badge"
+              >🛏️🛁 4 dormitórios climatizados, sendo 2 suítes</span
+            >
             <span class="badge">🚿 4 banheiros no total</span>
             <span class="badge">🛜 Wi-Fi disponível</span>
             <span class="badge">🍽️ Cozinha equipada</span>
