--- a/GBPiscina.html
+++ b/GBPiscina.html
@@ -67,7 +67,7 @@
           <h3>🏠 Sobre o apartamento</h3>
           <div class="badges">
             <span class="badge"
-              >🛏️ 2 dormitórios, sendo 1 suíte climatizada</span
+              >🛏️ 2 dormitórios climatizados, sendo 1 suíte</span
             >
             <span class="badge">🌊 Sala com vista para a piscina</span>
             <span class="badge">🧑‍🍳 Cozinha equipada</span>
