--- a/Riviera.html
+++ b/Riviera.html
@@ -69,6 +69,7 @@
             <span class="badge">🛏️ 2 dormitórios climatizados</span>
             <span class="badge">👨‍👩‍👧‍👦 Ambiente familiar</span>
             <span class="badge">🏊‍♂️ Sacada com vista para a piscina</span>
+            <span class="badge">🚗 2 vagas de garagem</span>
             <span class="badge"
               >👨‍👩‍👧‍👦 Acomoda até 8 pessoas, incluindo crianças</span
             >
